WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40736
Fix CRLF ending conversion in StringBlobItem
https://bugs.webkit.org/show_bug.cgi?id=40736
Summary
Fix CRLF ending conversion in StringBlobItem
Kinuko Yasuda
Reported
2010-06-16 13:54:46 PDT
Ending conversion in StringBlobItem, will be used by BlobBuilder, doesn't correctly handle CRLF input strings.
Attachments
Patch
(2.24 KB, patch)
2010-06-16 14:09 PDT
,
Kinuko Yasuda
jianli
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kinuko Yasuda
Comment 1
2010-06-16 14:09:56 PDT
Created
attachment 58932
[details]
Patch
Kinuko Yasuda
Comment 2
2010-06-16 14:20:10 PDT
I introduced a bug in my BlobItem patch. This should fix it.
Jian Li
Comment 3
2010-06-16 14:25:25 PDT
Comment on
attachment 58932
[details]
Patch r=me
Kinuko Yasuda
Comment 4
2010-06-17 14:15:36 PDT
Committed
r61349
: <
http://trac.webkit.org/changeset/61349
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug